--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
-    "react-wavify": "^1.11.1"
+    "react-wavify": "^1.11.1",
+    "swiper": "^12.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
