--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.5",
+    "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
     "react-wavify": "^1.11.1",
+    "slick-carousel": "^1.8.1",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
