--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-toastify": "^11.0.5",
     "react-wavify": "^1.11.1",
     "slick-carousel": "^1.8.1",
-    "swiper": "^12.0.2"
+    "swiper": "^12.0.2",
+    "tailwind-scrollbar-hide": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
